--- a/HaleyWorkFlowEngine/HaleyWorkFlowEngine.csproj
+++ b/HaleyWorkFlowEngine/HaleyWorkFlowEngine.csproj
@@ -1,13 +1,82 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>dotnet-HaleyWorkFlowEngine-56bcb26a-db59-4e1e-bc79-467d7db62056</UserSecretsId>
+    <OutputType>Library</OutputType>
+    <RootNamespace>Haley</RootNamespace>
+    <AssemblyName>Haley.WorkFlow.Engine</AssemblyName>
+    <Authors>TheHaleyProject</Authors>
+    <Company>TheHaleyProject</Company>
+    <Copyright>Haley 2025</Copyright>
+    <SignAssembly>True</SignAssembly>
+    <IsPackable>true</IsPackable>
+    <AssemblyOriginatorKeyFile>..\..\HaleyProject\HaleyProject.snk</AssemblyOriginatorKeyFile>
+    <PackageIcon>Haley.png</PackageIcon>
+    <Version>0.0.1</Version>
+    <IncludeSymbols>True</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageReleaseNotes>Pilot release</PackageReleaseNotes>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/TheHaleyProject/HaleyWorkFlow.Engine</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/TheHaleyProject/HaleyWorkFlow.Engine</RepositoryUrl>
+    <OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
+    <Description>Workflow Engine to handle the workflows managed by HaleyWorkflow</Description>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+    <None Include="..\..\HaleyLog\Haley.png" Link="Haley.png">
+      <PackagePath></PackagePath>
+      <Pack>True</Pack>
+    </None>
   </ItemGroup>
+
+  <Import Project="$(SolutionDir)ProjectReferences_$(SolutionName).txt" Condition="Exists('$(SolutionDir)ProjectReferences_$(SolutionName).txt')" />
+
+  <Choose>
+    <When Condition="Exists($(HaleyEvents))">
+      <ItemGroup>
+        <ProjectReference Include="$(HaleyEvents)\HaleyEvents.csproj">
+          <Name>HaleyEvents</Name>
+        </ProjectReference>
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <PackageReference Include="Haley.Events" Version="2.2.14" />
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
+
+  <Choose>
+    <When Condition="Exists($(HaleyRest))">
+      <ItemGroup>
+        <ProjectReference Include="$(HaleyRest)\HaleyRest.csproj">
+          <Name>HaleyRest</Name>
+        </ProjectReference>
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <PackageReference Include="Haley.Rest" Version="2.0.31" />
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
+
+  <Choose>
+    <When Condition="Exists($(HaleyWorkFlowBase))">
+      <ItemGroup>
+        <ProjectReference Include="$(HaleyWorkFlowBase)\HaleyWorkFlowBase.csproj">
+          <Name>HaleyWorkFlowBase</Name>
+        </ProjectReference>
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <PackageReference Include="Haley.WorkFlow.Base" Version="0.0.1" />
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
 </Project>
